[package]
name = "doge-utxos"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

[dependencies]
leveldb-rs = "0.0.7"
failure = "0.1.5"
bitcoin = "0.18.0"
throttled_bitcoin_rpc = { version = "0.2.1", features = ["doge"] }
hex = "0.3.2"
serde = { version = "1.0.92", features = ["derive"] }
serde_yaml = "0.8.9"
serde_cbor = "0.9.0"
hyper = "0.12.29"
bitcoin_hashes = "0.3.2"
serde_json = "1.0.39"
futures = "0.1.27"
http = "0.1.17"
url = "1.7.2"
reqwest = "0.9.18"
base64 = "0.10.1"
parking_lot = "0.8.0"
humantime = "1.2.0"
crossbeam-channel = "0.3.8"